--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,62 @@ body {
     text-wrap: balance;
   }
 }
+.GradientBG{
+  background: linear-gradient(#ED82B8,#86DEF4,#ED82B8);
+}
+.GradientBG2{
+  background: linear-gradient(90deg,#86DEF4 , #ED82B8  );
+}
+.GradientBG3{
+  background: linear-gradient(140deg,#86DEF4 0% 20%, #ED82B8  );
+}
+.TextGradient{
+  background: linear-gradient(90deg,#ED82B8 0% 50%,#86DEF4);
+  background-clip: text;
+  color: transparent;
+}
+.TomatoFont{
+  color: #FDFDFD;
+}
+
+.TomatoBG{
+  background: #F5F5F5;
+}
+
+.inpShadow{
+  box-shadow: 0px 3px 3px rgba(75, 74, 74, 0.098);
+}
+.Faq summary::marker{
+  content: '';
+}
+.Faq[open] .SummMark::before{
+  position: absolute;
+  content: '-';
+  font-size: 40px;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.SummMark::before{
+  position: absolute;
+  content: '+';
+  font-size: 40px;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.OverScroll::-webkit-scrollbar{
+  display: none;
+}
+
+
+
+@media (max-width: 500px) {
+    .br1{
+      display: none;
+    }
+}
