Changes + SMTP Added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,6 +115,8 @@ body {
   transform: translate(-50%, 0%);
 
 }
+
+/* summary{} */
 /* .VIpgJd-ZVi9od-ORHb .VIpgJd-ZVi9od-LgbsSe{
   display: none;
 } */
